--- a/notebooks/veri.ipynb
+++ b/notebooks/veri.ipynb
@@ -2,52 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Veri seti başarıyla oluşturuldu ve 'veri.csv' dosyasına kaydedildi!\n"
+     ]
+    }
+   ],
    "source": [
+    "# Gerekli kütüphaneleri import et\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import random\n",
+    "\n",
+    "# Veri seti oluşturma\n",
+    "np.random.seed(42)  # Rastgeleliği kontrol etmek için sabit bir seed\n",
+    "\n",
+    "# Örnek veri boyutu\n",
+    "num_samples = 1000\n",
     "\n",
     "# Özellikler\n",
-    "ev_tipleri = [\"Oda\", \"Daire\", \"Villa\"]\n",
-    "konumlar = [\"Şehir Merkezi\", \"Kırsal\"]\n",
-    "ek_hizmetler = [\"Havuz\", \"WiFi\", \"Kahvaltı\"]\n",
+    "ev_tipleri = ['oda', 'daire', 'villa']\n",
+    "konumlar = ['şehir merkezi', 'kırsal']\n",
+    "ek_hizmetler = ['havuz', 'WiFi', 'kahvaltı']\n",
     "\n",
     "# Veri üretimi\n",
-    "def veri_uret(n_samples=500):\n",
-    "    data = []\n",
-    "    for _ in range(n_samples):\n",
-    "        ev_tipi = random.choice(ev_tipleri)\n",
-    "        konum = random.choice(konumlar)\n",
-    "        oda_sayisi = random.randint(1, 5)\n",
-    "        kisi_sayisi = random.randint(1, 10)\n",
-    "        hizmet_sayisi = random.randint(0, len(ek_hizmetler))\n",
-    "        \n",
-    "        # Hizmetler binary: seçili mi seçili değil mi\n",
-    "        hizmetler = [random.choice([0, 1]) for _ in ek_hizmetler]\n",
-    "        \n",
-    "        # Fiyat tahmini\n",
-    "        fiyat = (\n",
-    "            50  # Temel fiyat\n",
-    "            + (ev_tipleri.index(ev_tipi) * 50)  # Ev tipi etkisi\n",
-    "            + (konumlar.index(konum) * 75)  # Konum etkisi\n",
-    "            + (oda_sayisi * 20)  # Oda sayısı etkisi\n",
-    "            + (kisi_sayisi * 15)  # Kişi sayısı etkisi\n",
-    "            + (sum(hizmetler) * 25)  # Ek hizmetler etkisi\n",
-    "        )\n",
-    "        data.append([ev_tipi, konum, oda_sayisi, kisi_sayisi] + hizmetler + [fiyat])\n",
-    "    \n",
-    "    # Kolon adları\n",
-    "    columns = [\"Ev Tipi\", \"Konum\", \"Oda Sayısı\", \"Kişi Sayısı\"] + ek_hizmetler + [\"Fiyat\"]\n",
-    "    return pd.DataFrame(data, columns=columns)\n",
+    "data = {\n",
+    "    'Ev Tipi': np.random.choice(ev_tipleri, size=num_samples),\n",
+    "    'Konum': np.random.choice(konumlar, size=num_samples),\n",
+    "    'Oda Sayısı': np.random.randint(1, 6, size=num_samples),\n",
+    "    'Konaklayabilecek Kişi Sayısı': np.random.randint(1, 11, size=num_samples),\n",
+    "    'Havuz': np.random.randint(0, 2, size=num_samples),\n",
+    "    'WiFi': np.random.randint(0, 2, size=num_samples),\n",
+    "    'Kahvaltı': np.random.randint(0, 2, size=num_samples),\n",
+    "}\n",
     "\n",
-    "# Veri setini oluştur\n",
-    "veri_seti = veri_uret()\n",
+    "# Fiyat: Rastgele bir formül ile\n",
+    "data['Fiyat'] = (\n",
+    "    np.random.randint(50, 200, size=num_samples)  # Temel fiyat\n",
+    "    + (data['Oda Sayısı'] * 10)  # Oda sayısına göre artış\n",
+    "    + (data['Konaklayabilecek Kişi Sayısı'] * 5)  # Kişi sayısına göre artış\n",
+    "    + (data['Havuz'] * 50)  # Havuz varlığı fiyatı artırır\n",
+    "    + (data['WiFi'] * 20)  # WiFi fiyatı artırır\n",
+    "    + (data['Kahvaltı'] * 15)  # Kahvaltı fiyatı artırır\n",
+    ")\n",
     "\n",
-    "# Kaydet\n",
-    "veri_seti.to_csv('../data/veri.csv', index=False)\n"
+    "# Veri çerçevesi oluştur\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Veri setini kaydet\n",
+    "df.to_csv('veri.csv', index=False)\n",
+    "\n",
+    "print(\"Veri seti başarıyla oluşturuldu ve 'veri.csv' dosyasına kaydedildi!\")\n"
    ]
   }
  ],
