veri ipynb added

--- a/notebooks/veri.ipynb
+++ b/notebooks/veri.ipynb
@@ -2,61 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Veri seti başarıyla oluşturuldu ve 'veri.csv' dosyasına kaydedildi!\n"
+      "Veri seti başarıyla oluşturuldu ve '../data/veri.csv' dosyasına kaydedildi!\n"
      ]
     }
    ],
    "source": [
-    "# Gerekli kütüphaneleri import et\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "# Veri seti boyutu\n",
+    "n_samples = 5000\n",
+    "\n",
+    "# Veri seti özellikleri\n",
+    "property_types = [\"oda\", \"daire\", \"villa\"]\n",
+    "locations = [\"şehir merkezi\", \"kırsal\"]\n",
+    "pool_options = [0, 1]  # 0: Yok, 1: Var\n",
+    "wifi_options = [0, 1]  # 0: Yok, 1: Var\n",
+    "breakfast_options = [0, 1]  # 0: Yok, 1: Var\n",
     "\n",
     "# Veri seti oluşturma\n",
-    "np.random.seed(42)  # Rastgeleliği kontrol etmek için sabit bir seed\n",
+    "random.seed(42)\n",
+    "np.random.seed(42)\n",
     "\n",
-    "# Örnek veri boyutu\n",
-    "num_samples = 1000\n",
-    "\n",
-    "# Özellikler\n",
-    "ev_tipleri = ['oda', 'daire', 'villa']\n",
-    "konumlar = ['şehir merkezi', 'kırsal']\n",
-    "ek_hizmetler = ['havuz', 'WiFi', 'kahvaltı']\n",
-    "\n",
-    "# Veri üretimi\n",
     "data = {\n",
-    "    'Ev Tipi': np.random.choice(ev_tipleri, size=num_samples),\n",
-    "    'Konum': np.random.choice(konumlar, size=num_samples),\n",
-    "    'Oda Sayısı': np.random.randint(1, 6, size=num_samples),\n",
-    "    'Konaklayabilecek Kişi Sayısı': np.random.randint(1, 11, size=num_samples),\n",
-    "    'Havuz': np.random.randint(0, 2, size=num_samples),\n",
-    "    'WiFi': np.random.randint(0, 2, size=num_samples),\n",
-    "    'Kahvaltı': np.random.randint(0, 2, size=num_samples),\n",
+    "    \"Ev Tipi\": random.choices(property_types, k=n_samples),\n",
+    "    \"Konum\": random.choices(locations, k=n_samples),\n",
+    "    \"Oda Sayısı\": np.random.randint(1, 6, size=n_samples),\n",
+    "    \"Kişi Sayısı\": np.random.randint(1, 10, size=n_samples),\n",
+    "    \"Havuz\": random.choices(pool_options, k=n_samples),\n",
+    "    \"WiFi\": random.choices(wifi_options, k=n_samples),\n",
+    "    \"Kahvaltı\": random.choices(breakfast_options, k=n_samples),\n",
+    "    \"Günlük Fiyat\": np.random.randint(100, 1000, size=n_samples),\n",
     "}\n",
     "\n",
-    "# Fiyat: Rastgele bir formül ile\n",
-    "data['Fiyat'] = (\n",
-    "    np.random.randint(50, 200, size=num_samples)  # Temel fiyat\n",
-    "    + (data['Oda Sayısı'] * 10)  # Oda sayısına göre artış\n",
-    "    + (data['Konaklayabilecek Kişi Sayısı'] * 5)  # Kişi sayısına göre artış\n",
-    "    + (data['Havuz'] * 50)  # Havuz varlığı fiyatı artırır\n",
-    "    + (data['WiFi'] * 20)  # WiFi fiyatı artırır\n",
-    "    + (data['Kahvaltı'] * 15)  # Kahvaltı fiyatı artırır\n",
-    ")\n",
-    "\n",
-    "# Veri çerçevesi oluştur\n",
+    "# DataFrame'e dönüştürme\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# Veri setini kaydet\n",
-    "df.to_csv('veri.csv', index=False)\n",
+    "# Dosyayı kaydetme\n",
+    "df.to_csv(\"../data/veri.csv\", index=False)\n",
     "\n",
-    "print(\"Veri seti başarıyla oluşturuldu ve 'veri.csv' dosyasına kaydedildi!\")\n"
+    "print(\"Veri seti başarıyla oluşturuldu ve '../data/veri.csv' dosyasına kaydedildi!\")\n"
    ]
   }
  ],
