--- a/notebooks/algoritma.ipynb
+++ b/notebooks/algoritma.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,9 @@
       "\n",
       "Eğitim ve test setlerinin boyutları:\n",
       "X_train: (800, 8), X_test: (200, 8)\n",
-      "y_train: (800,), y_test: (200,)\n"
+      "y_train: (800,), y_test: (200,)\n",
+      "\n",
+      "Veri ön işleme tamamlandı ve veriler kaydedildi!\n"
      ]
     }
    ],
@@ -123,6 +125,162 @@
     "    print(\"\\nVeri ön işleme tamamlandı ve veriler kaydedildi!\")\n",
     "else:\n",
     "    print(\"Hata: Eğitim ve test setleri oluşturulamadı!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import joblib\n",
+    "import warnings\n",
+    "\n",
+    "# Uyarıları gizle\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "\n",
+    "# Veri setini yükleme\n",
+    "full_data = pd.read_csv(\"../data/veri.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kategorik verileri one-hot encoding ile sayısal hale getirme\n",
+    "full_data = pd.get_dummies(full_data, columns=[\"Ev Tipi\", \"Konum\"], drop_first=True)\n",
+    "\n",
+    "# Özellikler ve hedef sütunları ayırma\n",
+    "X = full_data.drop(\"Günlük Fiyat\", axis=1)\n",
+    "y = full_data[\"Günlük Fiyat\"]\n",
+    "\n",
+    "# Eğitim ve test setlerine ayırma\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Algoritma listesi\n",
+    "algorithms = {\n",
+    "    \"Linear Regression\": LinearRegression(),\n",
+    "    \"Ridge Regression\": Ridge(),\n",
+    "    \"Lasso Regression\": Lasso(),\n",
+    "    \"Decision Tree\": DecisionTreeRegressor(),\n",
+    "    \"Random Forest\": RandomForestRegressor(),\n",
+    "    \"Gradient Boosting\": GradientBoostingRegressor(),\n",
+    "    \"AdaBoost\": AdaBoostRegressor(),\n",
+    "    \"Support Vector Machine\": SVR(),\n",
+    "    \"K-Neighbors Regressor\": KNeighborsRegressor(),\n",
+    "    \"Neural Network (MLP)\": MLPRegressor(max_iter=500)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Linear Regression\n",
+      "RMSE: 263.3888\n",
+      "\n",
+      "Model: Ridge Regression\n",
+      "RMSE: 263.3883\n",
+      "\n",
+      "Model: Lasso Regression\n",
+      "RMSE: 263.1790\n",
+      "\n",
+      "Model: Decision Tree\n",
+      "RMSE: 324.6585\n",
+      "\n",
+      "Model: Random Forest\n",
+      "RMSE: 296.7343\n",
+      "\n",
+      "Model: Gradient Boosting\n",
+      "RMSE: 263.9975\n",
+      "\n",
+      "Model: AdaBoost\n",
+      "RMSE: 263.5921\n",
+      "\n",
+      "Model: Support Vector Machine\n",
+      "RMSE: 263.7186\n",
+      "\n",
+      "Model: K-Neighbors Regressor\n",
+      "RMSE: 284.7767\n",
+      "\n",
+      "Model: Neural Network (MLP)\n",
+      "RMSE: 263.2237\n",
+      "\n",
+      "En iyi model kaydedildi: Lasso ile RMSE: 263.1790\n",
+      "\n",
+      "Model Performans Sonuçları:\n",
+      "Linear Regression: RMSE = 263.3888\n",
+      "Ridge Regression: RMSE = 263.3883\n",
+      "Lasso Regression: RMSE = 263.1790\n",
+      "Decision Tree: RMSE = 324.6585\n",
+      "Random Forest: RMSE = 296.7343\n",
+      "Gradient Boosting: RMSE = 263.9975\n",
+      "AdaBoost: RMSE = 263.5921\n",
+      "Support Vector Machine: RMSE = 263.7186\n",
+      "K-Neighbors Regressor: RMSE = 284.7767\n",
+      "Neural Network (MLP): RMSE = 263.2237\n",
+      "\n",
+      "Seçilen En İyi Model: Lasso ile RMSE: 263.1790\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modelleri eğit ve doğrulukları ölç\n",
+    "best_model = None\n",
+    "best_rmse = float(\"inf\")\n",
+    "results = []\n",
+    "\n",
+    "for name, model in algorithms.items():\n",
+    "    print(f\"Model: {name}\")\n",
+    "    try:\n",
+    "        # Modeli eğit\n",
+    "        model.fit(X_train, y_train)\n",
+    "        # Tahmin yap\n",
+    "        predictions = model.predict(X_test)\n",
+    "        # RMSE hesapla\n",
+    "        rmse = mean_squared_error(y_test, predictions, squared=False)\n",
+    "        results.append((name, rmse))\n",
+    "        print(f\"RMSE: {rmse:.4f}\\n\")\n",
+    "        # En iyi modeli seç\n",
+    "        if rmse < best_rmse:\n",
+    "            best_rmse = rmse\n",
+    "            best_model = model\n",
+    "    except Exception as e:\n",
+    "        print(f\"{name} modeli hata verdi: {e}\\n\")\n",
+    "\n",
+    "# En iyi modeli kaydetme\n",
+    "if best_model is not None:\n",
+    "    joblib.dump(best_model, \"../models/eniyi.joblib\")\n",
+    "    best_model_name = type(best_model).__name__\n",
+    "    print(f\"En iyi model kaydedildi: {best_model_name} ile RMSE: {best_rmse:.4f}\")\n",
+    "else:\n",
+    "    best_model_name = \"Hiçbiri\"\n",
+    "    print(\"En iyi model bulunamadı ve kaydedilemedi.\")\n",
+    "\n",
+    "# Sonuçları göster\n",
+    "print(\"\\nModel Performans Sonuçları:\")\n",
+    "for name, rmse in results:\n",
+    "    print(f\"{name}: RMSE = {rmse:.4f}\")\n",
+    "\n",
+    "print(f\"\\nSeçilen En İyi Model: {best_model_name} ile RMSE: {best_rmse:.4f}\")"
    ]
   }
  ],
