--- a/notebooks/algoritma.ipynb
+++ b/notebooks/algoritma.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -204,16 +204,16 @@
       "RMSE: 263.1790\n",
       "\n",
       "Model: Decision Tree\n",
-      "RMSE: 324.6585\n",
+      "RMSE: 324.3786\n",
       "\n",
       "Model: Random Forest\n",
-      "RMSE: 296.7343\n",
+      "RMSE: 295.8948\n",
       "\n",
       "Model: Gradient Boosting\n",
       "RMSE: 263.9975\n",
       "\n",
       "Model: AdaBoost\n",
-      "RMSE: 263.5921\n",
+      "RMSE: 263.1359\n",
       "\n",
       "Model: Support Vector Machine\n",
       "RMSE: 263.7186\n",
@@ -222,23 +222,23 @@
       "RMSE: 284.7767\n",
       "\n",
       "Model: Neural Network (MLP)\n",
-      "RMSE: 263.2237\n",
+      "RMSE: 263.2072\n",
       "\n",
-      "En iyi model kaydedildi: Lasso ile RMSE: 263.1790\n",
+      "En iyi model kaydedildi: AdaBoostRegressor ile RMSE: 263.1359\n",
       "\n",
       "Model Performans Sonuçları:\n",
       "Linear Regression: RMSE = 263.3888\n",
       "Ridge Regression: RMSE = 263.3883\n",
       "Lasso Regression: RMSE = 263.1790\n",
-      "Decision Tree: RMSE = 324.6585\n",
-      "Random Forest: RMSE = 296.7343\n",
+      "Decision Tree: RMSE = 324.3786\n",
+      "Random Forest: RMSE = 295.8948\n",
       "Gradient Boosting: RMSE = 263.9975\n",
-      "AdaBoost: RMSE = 263.5921\n",
+      "AdaBoost: RMSE = 263.1359\n",
       "Support Vector Machine: RMSE = 263.7186\n",
       "K-Neighbors Regressor: RMSE = 284.7767\n",
-      "Neural Network (MLP): RMSE = 263.2237\n",
+      "Neural Network (MLP): RMSE = 263.2072\n",
       "\n",
-      "Seçilen En İyi Model: Lasso ile RMSE: 263.1790\n"
+      "Seçilen En İyi Model: AdaBoostRegressor ile RMSE: 263.1359\n"
      ]
     }
    ],
