--- a/notebooks/algoritma.ipynb
+++ b/notebooks/algoritma.ipynb
@@ -2,134 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import random\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# Veri seti boyutu\n",
-    "n_samples = 1000\n",
-    "\n",
-    "# Veri seti özellikleri\n",
-    "property_types = [\"oda\", \"daire\", \"villa\"]\n",
-    "locations = [\"şehir merkezi\", \"kırsal\"]\n",
-    "pool_options = [0, 1]  # 0: Yok, 1: Var\n",
-    "wifi_options = [0, 1]  # 0: Yok, 1: Var\n",
-    "breakfast_options = [0, 1]  # 0: Yok, 1: Var"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Veri setinin ilk 5 satırı:\n",
-      "  Ev Tipi          Konum  Oda Sayısı  Kişi Sayısı  Havuz  WiFi  Kahvaltı  \\\n",
-      "0   daire  şehir merkezi           4            4      0     1         0   \n",
-      "1     oda         kırsal           5            4      1     1         0   \n",
-      "2     oda         kırsal           3            5      0     1         0   \n",
-      "3     oda         kırsal           5            8      0     0         1   \n",
-      "4   villa  şehir merkezi           5            5      0     0         1   \n",
-      "\n",
-      "   Günlük Fiyat  \n",
-      "0           141  \n",
-      "1           777  \n",
-      "2           693  \n",
-      "3           528  \n",
-      "4           902  \n"
-     ]
-    }
-   ],
-   "source": [
-    "# Veri seti oluşturma\n",
-    "random.seed(42)\n",
-    "np.random.seed(42)\n",
-    "\n",
-    "data = {\n",
-    "    \"Ev Tipi\": random.choices(property_types, k=n_samples),\n",
-    "    \"Konum\": random.choices(locations, k=n_samples),\n",
-    "    \"Oda Sayısı\": np.random.randint(1, 6, size=n_samples),\n",
-    "    \"Kişi Sayısı\": np.random.randint(1, 10, size=n_samples),\n",
-    "    \"Havuz\": random.choices(pool_options, k=n_samples),\n",
-    "    \"WiFi\": random.choices(wifi_options, k=n_samples),\n",
-    "    \"Kahvaltı\": random.choices(breakfast_options, k=n_samples),\n",
-    "    \"Günlük Fiyat\": np.random.randint(100, 1000, size=n_samples),\n",
-    "}\n",
-    "\n",
-    "# DataFrame'e dönüştürme\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Veri setinin ilk 5 satırını ekrana yazdırma\n",
-    "print(\"Veri setinin ilk 5 satırı:\")\n",
-    "print(df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Kategorik verileri one-hot encoding ile sayısal hale getirme\n",
-    "if \"Ev Tipi\" in df.columns and \"Konum\" in df.columns:\n",
-    "    df = pd.get_dummies(df, columns=[\"Ev Tipi\", \"Konum\"], drop_first=True)\n",
-    "else:\n",
-    "    print(\"Hata: Kategorik kolonlar bulunamadı!\")\n",
-    "\n",
-    "# Özellikler (X) ve hedef sütunu (Y) ayırma\n",
-    "if \"Günlük Fiyat\" in df.columns:\n",
-    "    X = df.drop(\"Günlük Fiyat\", axis=1)\n",
-    "    y = df[\"Günlük Fiyat\"]\n",
-    "else:\n",
-    "    print(\"Hata: Hedef kolon (Günlük Fiyat) bulunamadı!\")\n",
-    "    X = pd.DataFrame()\n",
-    "    y = pd.Series()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Eğitim ve test setlerinin boyutları:\n",
-      "X_train: (800, 8), X_test: (200, 8)\n",
-      "y_train: (800,), y_test: (200,)\n",
-      "\n",
-      "Veri ön işleme tamamlandı ve veriler kaydedildi!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Eğitim ve test setlerine ayırma\n",
-    "if not X.empty and not y.empty:\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "    # Eğitim ve test setlerinin boyutlarını ekrana yazdırma\n",
-    "    print(\"\\nEğitim ve test setlerinin boyutları:\")\n",
-    "    print(f\"X_train: {X_train.shape}, X_test: {X_test.shape}\")\n",
-    "    print(f\"y_train: {y_train.shape}, y_test: {y_test.shape}\")\n",
-    "    \n",
-    "    print(\"\\nVeri ön işleme tamamlandı ve veriler kaydedildi!\")\n",
-    "else:\n",
-    "    print(\"Hata: Eğitim ve test setleri oluşturulamadı!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,32 +17,63 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import joblib\n",
-    "import warnings\n",
     "\n",
-    "# Uyarıları gizle\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "# Veriyi yükleme\n",
+    "df = pd.read_csv(\"../data/veri.csv\")\n",
     "\n",
-    "# Veri setini yükleme\n",
-    "full_data = pd.read_csv(\"../data/veri.csv\")"
+    "# Eğitim ve test setlerini oluştur\n",
+    "X = df.drop(\"Günlük Fiyat\", axis=1)\n",
+    "y = df[\"Günlük Fiyat\"]\n",
+    "\n",
+    "\n",
+    "# Eğitim ve test setlerine ayırma\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Linear Regression\n",
+      "RMSE: 247.8870\n",
+      "\n",
+      "Model: Ridge Regression\n",
+      "RMSE: 247.8774\n",
+      "\n",
+      "Model: Lasso Regression\n",
+      "RMSE: 247.7951\n",
+      "\n",
+      "Model: Decision Tree\n",
+      "RMSE: 364.6364\n",
+      "\n",
+      "Model: Random Forest\n",
+      "RMSE: 265.3883\n",
+      "\n",
+      "Model: Gradient Boosting\n",
+      "RMSE: 252.5872\n",
+      "\n",
+      "Model: AdaBoost\n",
+      "RMSE: 249.1276\n",
+      "\n",
+      "Model: Support Vector Machine\n",
+      "RMSE: 248.7232\n",
+      "\n",
+      "Model: K-Neighbors Regressor\n",
+      "RMSE: 269.5522\n",
+      "\n",
+      "Model: Neural Network (MLP)\n",
+      "RMSE: 274.7526\n",
+      "\n",
+      "En iyi model kaydedildi: Lasso ile RMSE: 247.7951\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kategorik verileri one-hot encoding ile sayısal hale getirme\n",
-    "full_data = pd.get_dummies(full_data, columns=[\"Ev Tipi\", \"Konum\"], drop_first=True)\n",
-    "\n",
-    "# Özellikler ve hedef sütunları ayırma\n",
-    "X = full_data.drop(\"Günlük Fiyat\", axis=1)\n",
-    "y = full_data[\"Günlük Fiyat\"]\n",
-    "\n",
-    "# Eğitim ve test setlerine ayırma\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
     "# Algoritma listesi\n",
     "algorithms = {\n",
     "    \"Linear Regression\": LinearRegression(),\n",
@@ -182,105 +86,96 @@
     "    \"Support Vector Machine\": SVR(),\n",
     "    \"K-Neighbors Regressor\": KNeighborsRegressor(),\n",
     "    \"Neural Network (MLP)\": MLPRegressor(max_iter=500)\n",
-    "}"
+    "}\n",
+    "\n",
+    "# Modelleri eğit ve değerlendir\n",
+    "best_model = RandomForestRegressor(random_state=42)\n",
+    "\n",
+    "best_rmse = float(\"inf\")\n",
+    "results = []\n",
+    "\n",
+    "for name, model in algorithms.items():\n",
+    "    print(f\"Model: {name}\")\n",
+    "    model.fit(X_train, y_train)\n",
+    "    predictions = model.predict(X_test)\n",
+    "    rmse = mean_squared_error(y_test, predictions, squared=False)\n",
+    "    results.append((name, rmse))\n",
+    "    print(f\"RMSE: {rmse:.4f}\\n\")\n",
+    "    if rmse < best_rmse:\n",
+    "        best_rmse = rmse\n",
+    "        best_model = model\n",
+    "\n",
+    "# En iyi modeli kaydet\n",
+    "joblib.dump(best_model, \"../models/eniyi.joblib\")\n",
+    "print(f\"En iyi model kaydedildi: {type(best_model).__name__} ile RMSE: {best_rmse:.4f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Linear Regression\n",
-      "RMSE: 263.3888\n",
-      "\n",
-      "Model: Ridge Regression\n",
-      "RMSE: 263.3883\n",
-      "\n",
-      "Model: Lasso Regression\n",
-      "RMSE: 263.1790\n",
-      "\n",
-      "Model: Decision Tree\n",
-      "RMSE: 324.3786\n",
-      "\n",
-      "Model: Random Forest\n",
-      "RMSE: 295.8948\n",
-      "\n",
-      "Model: Gradient Boosting\n",
-      "RMSE: 263.9975\n",
-      "\n",
-      "Model: AdaBoost\n",
-      "RMSE: 263.1359\n",
-      "\n",
-      "Model: Support Vector Machine\n",
-      "RMSE: 263.7186\n",
-      "\n",
-      "Model: K-Neighbors Regressor\n",
-      "RMSE: 284.7767\n",
-      "\n",
-      "Model: Neural Network (MLP)\n",
-      "RMSE: 263.2072\n",
-      "\n",
-      "En iyi model kaydedildi: AdaBoostRegressor ile RMSE: 263.1359\n",
       "\n",
       "Model Performans Sonuçları:\n",
-      "Linear Regression: RMSE = 263.3888\n",
-      "Ridge Regression: RMSE = 263.3883\n",
-      "Lasso Regression: RMSE = 263.1790\n",
-      "Decision Tree: RMSE = 324.3786\n",
-      "Random Forest: RMSE = 295.8948\n",
-      "Gradient Boosting: RMSE = 263.9975\n",
-      "AdaBoost: RMSE = 263.1359\n",
-      "Support Vector Machine: RMSE = 263.7186\n",
-      "K-Neighbors Regressor: RMSE = 284.7767\n",
-      "Neural Network (MLP): RMSE = 263.2072\n",
-      "\n",
-      "Seçilen En İyi Model: AdaBoostRegressor ile RMSE: 263.1359\n"
+      "Linear Regression: RMSE = 247.8870\n",
+      "Ridge Regression: RMSE = 247.8774\n",
+      "Lasso Regression: RMSE = 247.7951\n",
+      "Decision Tree: RMSE = 366.3576\n",
+      "Random Forest: RMSE = 264.3624\n",
+      "Gradient Boosting: RMSE = 252.8028\n",
+      "AdaBoost: RMSE = 248.4299\n",
+      "Support Vector Machine: RMSE = 248.7232\n",
+      "K-Neighbors Regressor: RMSE = 269.5522\n",
+      "Neural Network (MLP): RMSE = 275.5738\n"
      ]
     }
    ],
    "source": [
-    "# Modelleri eğit ve doğrulukları ölç\n",
-    "best_model = None\n",
-    "best_rmse = float(\"inf\")\n",
-    "results = []\n",
-    "\n",
-    "for name, model in algorithms.items():\n",
-    "    print(f\"Model: {name}\")\n",
-    "    try:\n",
-    "        # Modeli eğit\n",
-    "        model.fit(X_train, y_train)\n",
-    "        # Tahmin yap\n",
-    "        predictions = model.predict(X_test)\n",
-    "        # RMSE hesapla\n",
-    "        rmse = mean_squared_error(y_test, predictions, squared=False)\n",
-    "        results.append((name, rmse))\n",
-    "        print(f\"RMSE: {rmse:.4f}\\n\")\n",
-    "        # En iyi modeli seç\n",
-    "        if rmse < best_rmse:\n",
-    "            best_rmse = rmse\n",
-    "            best_model = model\n",
-    "    except Exception as e:\n",
-    "        print(f\"{name} modeli hata verdi: {e}\\n\")\n",
-    "\n",
-    "# En iyi modeli kaydetme\n",
-    "if best_model is not None:\n",
-    "    joblib.dump(best_model, \"../models/eniyi.joblib\")\n",
-    "    best_model_name = type(best_model).__name__\n",
-    "    print(f\"En iyi model kaydedildi: {best_model_name} ile RMSE: {best_rmse:.4f}\")\n",
-    "else:\n",
-    "    best_model_name = \"Hiçbiri\"\n",
-    "    print(\"En iyi model bulunamadı ve kaydedilemedi.\")\n",
-    "\n",
-    "# Sonuçları göster\n",
     "print(\"\\nModel Performans Sonuçları:\")\n",
     "for name, rmse in results:\n",
-    "    print(f\"{name}: RMSE = {rmse:.4f}\")\n",
+    "    print(f\"{name}: RMSE = {rmse:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model yeniden eğitildi ve kaydedildi.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Eğitim ve test setlerini oluştur\n",
+    "import pandas as pd\n",
     "\n",
-    "print(f\"\\nSeçilen En İyi Model: {best_model_name} ile RMSE: {best_rmse:.4f}\")"
+    "# Assuming the CSV file is in the same directory as the notebook\n",
+    "\n",
+    "df = pd.read_csv(\"../data/veri.csv\")\n",
+    "\n",
+    "X = df.drop(\"Günlük Fiyat\", axis=1)\n",
+    "y = df[\"Günlük Fiyat\"]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Modeli eğitme\n",
+    "best_model = RandomForestRegressor(random_state=42)\n",
+    "best_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Modeli kaydet\n",
+    "\n",
+    "from joblib import dump\n",
+    "\n",
+    "dump(best_model, \"../models/eniyi.joblib\")\n",
+    "print(\"Model yeniden eğitildi ve kaydedildi.\")\n"
    ]
   }
  ],
