--- a/notebooks/algoritma.ipynb
+++ b/notebooks/algoritma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,36 +40,100 @@
      "output_type": "stream",
      "text": [
       "Model: Linear Regression\n",
-      "RMSE: 247.8870\n",
+      "RMSE: 0.0000\n",
       "\n",
       "Model: Ridge Regression\n",
-      "RMSE: 247.8774\n",
+      "RMSE: 0.1268\n",
       "\n",
       "Model: Lasso Regression\n",
-      "RMSE: 247.7951\n",
+      "RMSE: 4.7104\n",
       "\n",
       "Model: Decision Tree\n",
-      "RMSE: 364.6364\n",
+      "RMSE: 14.2021\n",
       "\n",
-      "Model: Random Forest\n",
-      "RMSE: 265.3883\n",
+      "Model: Random Forest\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 9.3185\n",
       "\n",
       "Model: Gradient Boosting\n",
-      "RMSE: 252.5872\n",
+      "RMSE: 6.7611\n",
       "\n",
-      "Model: AdaBoost\n",
-      "RMSE: 249.1276\n",
+      "Model: AdaBoost\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 46.8823\n",
       "\n",
-      "Model: Support Vector Machine\n",
-      "RMSE: 248.7232\n",
+      "Model: Support Vector Machine\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 129.9541\n",
       "\n",
       "Model: K-Neighbors Regressor\n",
-      "RMSE: 269.5522\n",
+      "RMSE: 42.2332\n",
       "\n",
       "Model: Neural Network (MLP)\n",
-      "RMSE: 274.7526\n",
+      "RMSE: 0.3163\n",
       "\n",
-      "En iyi model kaydedildi: Lasso ile RMSE: 247.7951\n"
+      "En iyi model kaydedildi: LinearRegression ile RMSE: 0.0000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:690: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\elifv\\anaconda3\\envs\\ML\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -112,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,16 +185,16 @@
      "text": [
       "\n",
       "Model Performans Sonuçları:\n",
-      "Linear Regression: RMSE = 247.8870\n",
-      "Ridge Regression: RMSE = 247.8774\n",
-      "Lasso Regression: RMSE = 247.7951\n",
-      "Decision Tree: RMSE = 366.3576\n",
-      "Random Forest: RMSE = 264.3624\n",
-      "Gradient Boosting: RMSE = 252.8028\n",
-      "AdaBoost: RMSE = 248.4299\n",
-      "Support Vector Machine: RMSE = 248.7232\n",
-      "K-Neighbors Regressor: RMSE = 269.5522\n",
-      "Neural Network (MLP): RMSE = 275.5738\n"
+      "Linear Regression: RMSE = 0.0000\n",
+      "Ridge Regression: RMSE = 0.1268\n",
+      "Lasso Regression: RMSE = 4.7104\n",
+      "Decision Tree: RMSE = 14.2021\n",
+      "Random Forest: RMSE = 9.3185\n",
+      "Gradient Boosting: RMSE = 6.7611\n",
+      "AdaBoost: RMSE = 46.8823\n",
+      "Support Vector Machine: RMSE = 129.9541\n",
+      "K-Neighbors Regressor: RMSE = 42.2332\n",
+      "Neural Network (MLP): RMSE = 0.3163\n"
      ]
     }
    ],
@@ -142,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
